<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="header">Playlist Maker</string>
    <string name="search_btn">Поиск</string>
    <string name="albums_btn">Медиатека</string>
    <string name="settings_btn">Настройки</string>
    <!--    search fragment-->
    <string name="header_search_activity">Поиск</string>
    <string name="search_hint_search_activity">Поиск</string>
    <string name="search_bar_search_activity">Поиск</string>
    <string name="albums_bar_search_activity">Медиатека</string>
    <string name="settings_bar_search_activity">Настройки</string>
    <string name="refresh_button_search_activity">Обновить</string>
    <string name="place_holder_text_search_fail">Ничего не нашлось</string>
    <string name="place_holder_text_internet_throwable">Проблемы со связью\n\nЗагрузка не удалась. Проверьте\nподключение к интернету</string>
    <string name="place_holder_text_search_history">Вы искали</string>
    <string name="clear_search_history_button_search_activity">Очистить историю</string>
    <!--    settings fragment-->
    <string name="settings_tv">Настройки</string>
    <string name="night_tv">Темная тема</string>
    <string name="share_tv">Поделиться приложением</string>
    <string name="support_tv">Написать в поддержку</string>
    <string name="agreement_tv">Пользовательское соглашение</string>
    <string name="practicum_url">https://practicum.yandex.ru/android-developer/</string>
    <string name="email_support">jaroslavnefrit@yandex.ru</string>
    <string name="email_support_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="email_support_message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="user_agreement_url">https://yandex.ru/legal/practicum_offer/</string>
    <!--    player fragment-->
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="start_time">00:00</string>
    <string name="error_loading_preview">Не удалось загрузить трек</string>
    <string name="add_to_playlist_header">Добавить в плейлист</string>
    <string name="new_playlist_btn">Новый плейлист</string>
    <string name="track_already_added">Трек уже добавлен в плейлист %1$s</string>
    <string name="track_added_in_playlist">Добавлено в плейлист %1$s</string>
    <!--    album fragment-->
    <string name="header_album_activity">Медиатека</string>
    <string name="create_new_album_btn_album_activity">Новый плейлист</string>
    <string name="favorite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="no_playlists">Вы не создали \nни одного плейлиста</string>
    <string name="empty_library">Ваша медиатека пуста</string>
    <!--    playlist fragment-->
    <string name="header_playlist_fragment">Новый плейлист</string>
    <string name="hint_title">Название*</string>
    <string name="hint_description">Описание</string>
    <string name="label_create">Создать</string>
    <string name="label_save">Сохранить</string>
    <string name="playlist_create">Плейлист %1$s создан</string>
    <string name="finish_creating_dialog_title">Завершить создание плейлиста?</string>
    <string name="finish_creating_dialog_message">Все несохраненные данные будут потеряны</string>
    <string name="finish_creating_dialog_btn_positive">Завершить</string>
    <string name="finish_creating_dialog_btn_negative">Отмена</string>
    <string name="empty_playlist">В этом плейлисте еще нет треков</string>
    <string name="share">Поделиться</string>
    <string name="edit_playlist">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="dialog_btn_positive">Да</string>
    <string name="dialog_btn_negative">Нет</string>
    <string name="title_delete_playlist_dialog">Хотите удалить плейлист \"%1$s\"?</string>
    <string name="delete_track_dialog_title">Хотите удалить трек?</string>
    <string name="empty_playlist_nothing_to_share">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="playlist">Плейлист \"%1$s\"</string>
</resources>