<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_blue"
    android:orientation="vertical"
    android:paddingTop="14dp"
    android:paddingHorizontal="@dimen/padding_start_end"
    android:paddingBottom="28dp">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/header"
        android:textColor="@color/white"
        android:textSize="22sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        android:weightSum="3">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/search_btn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            style="@style/main_activity_btn"
            android:layout_weight="1"
            android:text="@string/search_btn"
            app:icon="@drawable/ic_search"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/albums_btn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            style="@style/main_activity_btn"
            android:layout_weight="1"
            android:layout_marginVertical="16dp"
            android:text="@string/albums_btn"
            app:icon="@drawable/ic_albums"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/settings_btn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            style="@style/main_activity_btn"
            android:layout_weight="1"
            android:text="@string/settings_btn"
            app:icon="@drawable/ic_settings"
            />


    </LinearLayout>


</LinearLayout>